syntax = "proto3";
package utility;

option go_package = "github.com/pokt-network/pocket/utility/types";

import "actor.proto";
import "vote.proto";
import "google/protobuf/any.proto";

message MessageSend {
  bytes from_address = 1;
  bytes to_address = 2;
  string amount = 3;
  ActorType actor_type = 4;
}

message MessageStake {
  bytes public_key = 1;
  repeated string chains = 2;
  string amount = 3;
  string service_url = 4;
  bytes output_address = 5;
  optional bytes signer = 6;
  ActorType actor_type = 7;
}

message MessageEditStake {
  bytes address = 1;
  repeated string chains = 2;
  string amount = 3;
  string service_url = 4;
  optional bytes signer = 5;
  ActorType actor_type = 6;
}

message MessageUnstake {
  bytes address = 1;
  optional bytes signer = 2;
  ActorType actor_type = 3;
}

message MessageUnpause {
  bytes address = 1;
  optional bytes signer = 2;
  ActorType actor_type = 3;
}

message MessageChangeParameter {
  bytes signer = 1;
  bytes owner = 2;
  string parameter_key = 3;
  google.protobuf.Any parameter_value = 4;
}

message MessageDoubleSign {
  utility.Vote vote_a = 1;
  utility.Vote vote_b = 2;
  optional bytes reporter_address = 3;
}